my_adapter.py complete
Завершена работа над заданием паттерн Адаптер.

--- a/2. OOP patterns in Python/Week 3/Adapter.ipynb
+++ b/2. OOP patterns in Python/Week 3/Adapter.ipynb
@@ -21,7 +21,7 @@
     "\n",
     "<img src=\"https://upload.wikimedia.org/wikipedia/ru/thumb/0/04/Adapter_pattern.svg/627px-Adapter_pattern.svg.png\">\n",
     "\n",
-    "Для создания адаптера необходима система и адаптируемый объект. Система взаимодействует с объектом, имеющим интерфейс Terget. Адаптер реализует этот интерфейс и взаимодействует с адаптируемым объектом.\n"
+    "Для создания адаптера необходима система и адаптируемый объект. Система взаимодействует с объектом, имеющим интерфейс Target. Адаптер реализует этот интерфейс и взаимодействует с адаптируемым объектом.\n"
    ]
   },
   {
