my_observer.py complete
Закончена работа по заданию Паттерн Наблюдатель.

--- a/2. OOP patterns in Python/Week 3/Observer.ipynb
+++ b/2. OOP patterns in Python/Week 3/Observer.ipynb
@@ -68,7 +68,7 @@
     "\n",
     "class NotificationManager: # Наблюдаемая система\n",
     "    def __init__(self): \n",
-    "        self.__subscribers = set() # При инициализации множество подписчиков звдвется пустым\n",
+    "        self.__subscribers = set() # При инициализации множество подписчиков задается пустым\n",
     "    \n",
     "    def subscribe(self, subscriber):\n",
     "        self.__subscribers.add(subscriber) # Для того чтобы подмисать пользователя, он добавляется во множество подписчиков\n",
@@ -164,7 +164,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
