Add yaml example
Добавлен пример конфигурирования через yaml.

--- a/2. OOP patterns in Python/Week 4/yaml_example/Yaml.ipynb
+++ b/2. OOP patterns in Python/Week 4/yaml_example/Yaml.ipynb
@@ -19,12 +19,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "yml_MD = '''\n",
-    "--- !MDreport                # указывает, что хранящаяся ниже структура относиться к типу MDreport   \n",
+    "--- !MDreport                # указывает, что хранящаяся ниже структура относится к типу MDreport   \n",
     "objects:                     # для хранения якорей\n",
     "  - &img !img                # якорь img хранит объект типа img\n",
     "      alt_text: coursera     # описание изображения\n",
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +139,7 @@
     "            rep.parts = data[\"parts\"]\n",
     "            return rep\n",
     "\n",
-    "    # обработчик создания части !chapter\n",
+    "        # обработчик создания части !chapter\n",
     "        def get_chapter(loader, node):\n",
     "            data = loader.construct_mapping(node)\n",
     "            ch = Class.make_chapter(data[\"caption\"])\n",
@@ -148,29 +148,28 @@
     "            ch.objects = data[\"parts\"]\n",
     "            return ch\n",
     "\n",
-    "    # обработчик создания ссылки !link\n",
+    "        # обработчик создания ссылки !link\n",
     "        def get_link(loader, node):\n",
     "            data = loader.construct_mapping(node)\n",
     "            lnk = Class.make_link(data[\"obj\"], data[\"href\"])\n",
     "            return lnk\n",
     "\n",
-    "    # обработчик создания изображения !img\n",
+    "        # обработчик создания изображения !img\n",
     "        def get_img(loader, node):\n",
     "            data = loader.construct_mapping(node)\n",
     "            img = Class.make_img(data[\"alt_text\"], data[\"src\"])\n",
     "            return img\n",
     "\n",
-    "    # добавляем обработчики\n",
+    "        # добавляем обработчики\n",
     "        loader.add_constructor(u\"!report\", get_report)\n",
     "        loader.add_constructor(u\"!chapter\", get_chapter)\n",
     "        loader.add_constructor(u\"!link\", get_link)\n",
     "        loader.add_constructor(u\"!img\", get_img)\n",
     "\n",
-    "    # возвращаем результат yaml обработчика - отчёт\n",
+    "        # возвращаем результат yaml обработчика - отчёт\n",
     "        return loader.construct_mapping(node)['report']\n",
     "\n",
     "    # ниже - без изменений\n",
-    "\n",
     "    @classmethod\n",
     "    def make_report(Class, title):\n",
     "        return Class.Report(title)\n",
@@ -197,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,7 +211,7 @@
     "        def add(self, part):\n",
     "            self.parts.append(part)\n",
     "\n",
-    "        def save(self):          # вносим изменения - имя файла отчёта указываеться в yaml файле\n",
+    "        def save(self):          # вносим изменения - имя файла отчёта указывается в yaml файле\n",
     "            try:\n",
     "                file = open(self.filename, \"w\", encoding=\"utf-8\")\n",
     "                print('\\n'.join(map(str, self.parts)), file=file)\n",
@@ -312,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -426,7 +425,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
